# aurora-ide

./: .cursorignore  .gitignore  .gitnexusignore  AGENTS.md  Aurora Semantic.md  CLAUDE.md  CURSOR_REFACTOR_STATUS.md  LICENSE  README.md  agent-saw.md  aurora-details-for-doc.md  build-logs.md  connector-doc.md  context-builder-design.md  context-core.md  context.md  cursor-flow2.md.md  cursorflow.md  enterprisegrade-task.md  glm-7.md  index.html  message-reveal.md  minimax-anthropic.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  promt.md  provider-changing-plan.md  someone-suggested.md  tailwind.config.js  tool-new.md  tools-search.md  tsco.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.cursor/rules/: 000-project-core.mdc  100-components.mdc
.github/workflows/: ci.yml  release.yml
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.refact/imports/: competitors.json
.trae/documents/: Aurora Visual Overhaul & Responsiveness Plan.md
.windsurf/rules/: theme.md
DOCS/: 01-ARCHITECTURE.md  02-CODE-STYLE-PATTERNS.md  03-EXPANSION-GUIDE.md  04-PROVIDER-KERNEL.md  05-ICON-PACKS.md  06-SPEECH-INPUT.md  AI_INTEGRATION_MAP.md  CURSOR_STYLE_REFACTORING_TASK.md  GETTING-STARTED.md  README.md  future-plan-thread-system.md  theme-dev.md  typescript-to-rust-refactor.md
DOCS/plan/: phase-2-3-contract.md  phase-3-4-5-contract.md  rust-agent-migration.md
aurora-semantic/: DEVELOPERS.md  README.md
centre-chat/ide-chat-interface-v1/: App.tsx  data.ts  index.html  metadata.json
example-themes/: AuroraModernDarkSoft.json  CarbonForest.json  Midnight.json  aurora-dark-complete.json  aurora-dark-v3.json  aurora-light-complete.json  aurora-modern-dark-v2.json  aurora-modern-dark.json  chaos.json  charcoal.json  dark-forest-depths.json  dark-midnight-rose.json  dark-nebula.json  dark-new-vs.json  deep-space.json  midnight-slate.json  modern-vscode-dark.json  noir.json  obsidian.json  storm.json  sunset-wave.json  toxic-green.json
examples/: example-from-another-agent.jsonl
examples-docs-cursor/: AURORA-REFACTORING-GUIDE.md  AURORA-VS-CURSOR-TOOLS.md  HOW-I-USE-TOOLS.md  SHAI-TOOLS-ANALYSIS.md  TOOL-SYSTEM-COMPARISON.md  cursor-format-structre.md  cursor-tools.md
models-provider-docs/: deepseek.md
scripts/: add-theme-notice.js  build-icon-pack.mjs  package-crispasr-runtime.mjs  setup-onnxruntime.mjs  setup.ps1  setup.sh  sync-material-icons.mjs  tauri-cuda.mjs  tauri-dev-stable.mjs  test-crispasr-transcribe.py  totp_app.py
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  ai-works.md  build.rs  tauri.conf.json  test-ai.md  tmpclaude-7983-cwd
src-tauri/.aurora/threads/: 0a6f6889-a919-4167-9925-b999d8d00a5c.json  0e8e9867-6cf9-4d1e-b2ec-ebce0505a6fb.json  13fd3674-8e29-40a1-b2ec-a4825f3a1d11.json  37bed68b-8754-4273-9bd5-23ec9fae3a98.json  5f041499-3848-4fa9-a562-d129565b0843.json  7ee65e08-e734-4fa0-ba28-77001233b30b.json  82cc62f1-c39c-45ab-a9fe-aa4dbae7175d.json  affa130a-73a6-434d-bd9a-2a720cdf187b.json  bd8c6063-1e95-4d77-96b1-bb2fa9abde46.json  d38e7c13-f054-4dba-a2ce-9814ac3a7b8a.json  dd34e58e-62ef-4f41-ba68-e0d189e66608.json  f8311cfa-0b20-4f0b-b688-0b0292434de8.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: browser.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  file_cache.rs  icon_pack.rs  lib.rs  main.rs  paths.rs
src-tauri/src/agent_runtime/: api_client.rs  bridge.rs  conversation.rs  error.rs  events.rs  hooks.rs  ipc.rs  mod.rs  recovery.rs  session.rs  session_store.rs  tool_executor.rs  types.rs
src-tauri/src/agent_safety/: bash_validation.rs  mod.rs  paths.rs
src-tauri/src/api/: AUDIT.md  anthropic.rs  client.rs  mod.rs  openai_compat.rs  provider_kernel_adapter.rs  sse.rs  sse_shared.rs
src-tauri/src/checkpoints/: mod.rs  service.rs  types.rs
src-tauri/src/commands/: agent_v2.rs  agent_v2_permissions.rs  browser.rs  chat.rs  checkpoints.rs  editor_ops.rs  git.rs  llm.rs  mod.rs  openai_native.rs  semantic.rs  settings.rs  speech.rs  state.rs  themes.rs  threads.rs  tokens.rs  undo_redo.rs
src-tauri/src/commands/local_providers/: commands.rs  detect.rs  http.rs  mod.rs  ollama.rs  types.rs
src-tauri/src/commands/provider_catalog/: commands.rs  types.rs
src-tauri/src/commands/provider_kernel/: builders.rs  commands.rs  mod.rs  parsers.rs  presets.rs  streaming.rs  types.rs
src-tauri/src/context/: builder.rs  commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/db/: connection.rs  error.rs  migrations.rs  mod.rs  models.rs  schema.rs
src-tauri/src/db/repositories/: checkpoints.rs  editor.rs  explorer.rs  mod.rs  models.rs  semantic.rs  settings.rs  themes.rs  threads.rs  workspace.rs
src-tauri/src/explorer/: commands.rs  mod.rs  service.rs  state.rs  types.rs
src-tauri/src/mcp/: commands.rs  config.rs  manager.rs  mod.rs  types.rs
src-tauri/src/services/: api_converter.rs  browser_native_capture.rs  browser_runtime.rs  mod.rs  thread_service.rs  token_service.rs
src-tauri/src/threads/: events.rs  index.rs  mod.rs  paths.rs  projector.rs  reader.rs  store.rs  title.rs  writer.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/browser/: mod.rs
src-tauri/src/tools/file_workspace_search/: aurora_search.rs  auroro_websearch.rs  file_create.rs  file_delete.rs  file_exists.rs  file_patch.rs  file_read.rs  file_write.rs  folder_create.rs  folder_delete.rs  grep.rs  mod.rs  multi_file_read.rs  multi_search_replace.rs  search_replace.rs  workspace_tree.rs
src-tauri/src/tools/permissions/: mod.rs  permission_guard.rs  prompter.rs  settings_aware.rs  tauri_emitter.rs
src-tauri/src/tools/shell_editor_todo/: editor_open_file.rs  ide_event_sink.rs  mod.rs  read_lints.rs  shell_execute.rs  shell_kill.rs  shell_list_processes.rs  shell_spawn.rs  todo_write.rs
src-tauri/src/undo_redo/: mod.rs  service.rs  types.rs
src/hooks/: useAutoSave.ts  useCliOpen.ts  useDetachedChatWindow.ts  useExplorerKeyboard.ts  useGlobalShortcuts.ts  useIconPackImportDrag.ts  useInternalDrag.ts  useRustChatSync.ts  (+11 more)
tasks/: lessons.md  todo.md
(+275 files in other folders)
