[package]
name = "aurora"
version = "0.1.0"
description = "Aurora - AI-Powered Agentic Code Editor"
authors = ["Aurora Team"]
edition = "2021"

[lib]
name = "aurora_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hostname = "0.4"
notify = "6"
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"

# Database dependencies
rusqlite = { version = "0.38.0", features = ["bundled", "serde_json"] }
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Diff library for comparing file changes
similar = "2"

# Semantic search engine for code indexing
# Path is relative to src-tauri directory, pointing to the external aurora-semantic crate
aurora-semantic = { version = "1.2.1", features = ["cuda"] }

# Lazy static for singleton patterns
lazy_static = "1.4"

# Cross-platform directories (for user-level semantic data storage)
dirs = "5.0"

# Performance optimizations
lru = "0.13"            # LRU cache for file contents
parking_lot = "0.12"    # Faster mutexes than std::sync
dashmap = "6"           # Concurrent hashmap for caching

# PTY support for native terminal
tauri-plugin-pty = "0.1"

[features]
# Default: Enable CUDA for NVIDIA GPUs (most common GPU acceleration)
# For Windows without CUDA: use --features directml instead
# For macOS: use --features coreml instead
default = ["cuda"]

# GPU acceleration features (pass through to aurora-semantic)
# Priority: CUDA > DirectML > CoreML > CPU
cuda = ["aurora-semantic/cuda"]
tensorrt = ["aurora-semantic/tensorrt"]
directml = ["aurora-semantic/directml"]
coreml = ["aurora-semantic/coreml"]

# CPU-only build (no GPU acceleration)
cpu-only = []

# Dev profile: enable some optimizations for better dev mode performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

