[package]
name = "aurora"
version = "1.5.0"
description = "Aurora - AI-Powered Agentic Code Editor"
authors = ["Aurora Team"]
edition = "2021"
default-run = "aurora"

[lib]
name = "aurora_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
hostname = "0.4"
notify = "6"
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
toml = "0.8"

# Database dependencies
rusqlite = { version = "0.38.0", features = ["bundled", "serde_json"] }
time = { version = "0.3", features = ["serde", "formatting"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Diff library for comparing file changes
similar = "2"

# Semantic search engine — local native Aurora IDE integration.
aurora-semantic = { path = "../../aurora-semantic", default-features = false }

# https://crates.io/crates/aurora_websearch
aurora_websearch = "0.1.0"

# Native Qwen3-ASR speech recognition. Default build is CPU-only; CUDA builds opt in via Aurora's `cuda` feature.
qwen3-asr = { version = "0.2.2", default-features = false }
candle-core = { version = "0.9.2", default-features = false }

# Lazy static for singleton patterns
lazy_static = "1.4"

# Cross-platform directories (for user-level semantic data storage)
dirs = "5.0"

# Performance optimizations
lru = "0.13"            # LRU cache for file contents
parking_lot = "0.12"    # Faster mutexes than std::sync
dashmap = "6"           # Concurrent hashmap for caching

# PTY support for native terminal
tauri-plugin-pty = "0.1"

# MCP (Model Context Protocol) client support
rmcp = { version = "0.1", features = ["client", "transport-child-process", "transport-sse"] }

# Token counting (accurate tokenizers for GPT-4, Claude, etc.)
tiktoken-rs = "0.6"

# CLI argument parsing for `aurora .` command
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
anyhow = "1"

# Single instance detection (prevent multiple instances, pass args to existing)
single-instance = "0.3"

# Note: Checkpoint system uses git CLI directly instead of git2
# because git2's index operations don't properly work with external worktrees

# Note: Undo/Redo uses a simple custom stack implementation
# (the undo crate's API was not a good fit for our per-file use case)

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
# tokenizers enables esaxx-rs/cpp by default. The upstream esaxx-rs build uses
# the static MSVC CRT, which conflicts with cxx's dynamic CRT when Aurora links
# its Tauri cdylib. Keep the crate source identical except for dynamic CRT.
esaxx-rs = { path = "../vendor/esaxx-rs" }
# candle-kernels builds its CUDA MOE archive with the static MSVC CRT by default.
# Aurora links a Tauri cdylib with dynamic CRT dependencies, so keep the crate
# source identical except for passing /MD to nvcc's host compiler on MSVC.
candle-kernels = { path = "../vendor/candle-kernels" }

[features]
# Default: CPU-only for maximum compatibility out of the box.
# Opt in to GPU acceleration for semantic search if available:
#   NVIDIA GPU:  cargo build --features cuda
#   Windows GPU: cargo build --features directml
#   macOS GPU:   cargo build --features coreml
default = ["cpu-only"]

# GPU acceleration features (pass through to aurora-semantic)
cuda = ["aurora-semantic/cuda", "qwen3-asr/cuda", "candle-core/cuda"]
tensorrt = ["aurora-semantic/tensorrt"]
directml = ["aurora-semantic/directml"]
coreml = ["aurora-semantic/coreml"]

# CPU-only build (no GPU acceleration) — safest default
cpu-only = []

# CLI mode - enables console window for CLI commands on Windows
cli-mode = []

# Dev profile: enable some optimizations for better dev mode performance
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
